forgot password done

--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -11,5 +11,5 @@
         android:height="120dp"/>
     <stroke
         android:width="2dp"
-        android:color="@color/mrk" />
+        android:color="@color/colorPrimaryDark" />
 </shape>
