--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="whish">#FDE4E2E2</color>
     <color name="skyBlue">#FF2E6FAA</color>
     <color name="green">#ff62b255</color>
+    <color name="hint">#4A4A4A</color>
+    <color name="light_blue">#F3F7FB</color>
 
 
 
