--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -1,170 +1,276 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/constraintLayout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".Fragments.Password_reset">
 
-<!-- <LinearLayout
- android:id="@+id/LinearRP"
- android:layout_width="match_parent"
- android:layout_height="wrap_content"
- android:background="@color/colorPrimaryDark"
- android:gravity="center_vertical"
- android:orientation="vertical"
- app:layout_constraintBottom_toTopOf="@+id/LinearInfo"
- app:layout_constraintEnd_toEndOf="parent"
- app:layout_constraintStart_toStartOf="parent"
- app:layout_constraintTop_toTopOf="parent"
- app:layout_constraintVertical_chainStyle="packed">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    tools:context=".Fragments.Password_reset">
 
- <TextView
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_gravity="center"
-     android:layout_marginBottom="15dp"
-     android:layout_marginTop="15dp"
-     android:text="registrationPage"
-     android:textSize="30sp" />
-
-</LinearLayout>-->
-<android.support.v7.widget.CardView
-    android:layout_width="320dp"
-    android:id="@+id/forgpass_layout"
-    android:layout_height="270dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp"
-    app:cardUseCompatPadding="true"
-    android:layout_marginBottom="8dp"
-    android:background="@color/view"
-    app:cardBackgroundColor="@color/white"
-    app:elevation="9dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
-
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/forgot_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="@color/Toolbar"
-        android:textAlignment="center"
-        app:titleTextAppearance="@color/Titel"
-        app:titleTextColor="@color/Titel">
-
-        <TextView
-            android:id="@+id/Tool_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Reset Password"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            app:titleTextColor="@color/white"
-
-            />
-
-
-    </android.support.v7.widget.Toolbar>
-
-
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/password_layout"
+        android:orientation="vertical"
+        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-
+        android:layout_gravity="center"
+        android:layout_marginBottom="40dp"
+        android:gravity="center">
         <android.support.v7.widget.CardView
-            android:id="@+id/cardview_name"
-            android:layout_width="267dp"
-            android:layout_height="30dp"
-            android:layout_gravity="start"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:padding="10dp"
+            android:id="@+id/password_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="5dp"
             app:cardBackgroundColor="#e6e6e5"
+            android:layout_marginTop="20dp"
             app:cardCornerRadius="5dp"
-            app:cardElevation="3dp"
-            app:layout_constraintBottom_toTopOf="@+id/submit"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:cardElevation="1dp">
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:textSize="15sp"
+                android:textStyle="italic"
+                android:layout_height="wrap_content">
 
-
-
+                <EditText
+                    android:id="@+id/new_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:paddingHorizontal="10dp"
+                    android:background="#e6e6e5"
+                    android:gravity="center|start"
+                    android:textStyle="italic"
+                    android:textColor="#000"
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    android:hint="Password"
+                    android:singleLine="true"
+                    android:inputType="textPassword"
+                    android:scrollHorizontally="true"/>
+            </android.support.design.widget.TextInputLayout>
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/password_card2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="5dp"
+            app:cardBackgroundColor="#e6e6e5"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="1dp">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:textSize="15sp"
+                android:textStyle="italic"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/confirm_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:paddingHorizontal="10dp"
+                    android:background="#e6e6e5"
+                    android:gravity="center|start"
+                    android:textStyle="italic"
+                    android:textColor="#000"
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    android:hint="Confirm Password"
+                    android:singleLine="true"
+                    android:scrollHorizontally="true"/>
+            </android.support.design.widget.TextInputLayout>
+        </android.support.v7.widget.CardView>
+        <Button
+            android:id="@+id/submit_password"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/relativeLayout2"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="5dp"
+            android:text="SUBMIT"
+            android:background="@drawable/butn_design2"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#fff" />
+    </LinearLayout>
+
+</LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/relativeLayout2"
-            android:layout_width="261dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/white"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/submit"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.558"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.834">
+
+
+    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Fragments.Password_reset">
+
+    &lt;!&ndash; <LinearLayout
+     android:id="@+id/LinearRP"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:background="@color/colorPrimaryDark"
+     android:gravity="center_vertical"
+     android:orientation="vertical"
+     app:layout_constraintBottom_toTopOf="@+id/LinearInfo"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent"
+     app:layout_constraintVertical_chainStyle="packed">
+
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:layout_marginBottom="15dp"
+         android:layout_marginTop="15dp"
+         android:text="registrationPage"
+         android:textSize="30sp" />
+
+    </LinearLayout>&ndash;&gt;
+    <android.support.v7.widget.CardView
+        android:layout_width="320dp"
+        android:id="@+id/forgpass_layout"
+        android:layout_height="270dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:cardUseCompatPadding="true"
+        android:layout_marginBottom="8dp"
+        android:background="@color/view"
+        app:cardBackgroundColor="@color/white"
+        app:elevation="9dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/forgot_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:background="@color/Toolbar"
+            android:textAlignment="center"
+            app:titleTextAppearance="@color/Titel"
+            app:titleTextColor="@color/Titel">
 
             <TextView
-                android:id="@+id/setoption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15dp" />
-
-            <EditText
-                android:id="@+id/type"
+                android:id="@+id/Tool_title"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:background="#DADADA"
-                android:maxLines="1"
-                android:paddingLeft="20dp"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:textSize="15sp" />
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Reset Password"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                app:titleTextColor="@color/white"
 
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/submit"
-            android:layout_width="150dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/Toolbar"
-            android:padding="10dp"
-            android:text="submit"
-            android:textColor="#FFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.555"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.865" />
+                />
 
 
-    </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+        </android.support.v7.widget.Toolbar>
 
-</android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardview_name"
+                android:layout_width="267dp"
+                android:layout_height="30dp"
+                android:layout_gravity="start"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:padding="10dp"
+                app:cardBackgroundColor="#e6e6e5"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="3dp"
+                app:layout_constraintBottom_toTopOf="@+id/submit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+
+
+            </android.support.v7.widget.CardView>
+
+
+
+            <LinearLayout
+                android:id="@+id/relativeLayout2"
+                android:layout_width="261dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@color/white"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/submit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.558"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.834">
+
+                <TextView
+                    android:id="@+id/setoption"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp" />
+
+                <EditText
+                    android:id="@+id/type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:background="#DADADA"
+                    android:maxLines="1"
+                    android:paddingLeft="20dp"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/submit"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@color/Toolbar"
+                android:padding="10dp"
+                android:text="submit"
+                android:textColor="#FFF"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.555"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.865" />
+
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
+    </android.support.constraint.ConstraintLayout>-->
 
 
 
