--- a/app/src/main/res/layout/fragment_customize_order_frag2.xml
+++ b/app/src/main/res/layout/fragment_customize_order_frag2.xml
@@ -332,22 +332,32 @@
 
 
             </LinearLayout>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:elevation="2dp"
+                app:cardCornerRadius="4dp"
+                android:layout_gravity="center">
              <ImageView
                  android:layout_width="120dp"
-                 android:elevation="2dp"
                  android:id="@+id/reference_image"
                  android:visibility="gone"
                  android:layout_height="120dp"
                  android:layout_gravity="center"/>
+            </android.support.v7.widget.CardView>
+
 
             <Button
-                android:layout_width="match_parent"
+                android:layout_width="225dp"
                 android:layout_height="32dp"
                 android:id="@+id/reference_image_btn"
-               android:layout_margin="32dp"
-                android:hint="UPLOAD REFERENCE IMAGE"
+                android:layout_gravity="center"
+                android:layout_margin="32dp"
+                android:text="UPLOAD REFERENCE IMAGE"
                 android:textAppearance="@style/customer_nu"
-                android:textColorHint="@color/skyBlue"
+                android:textColor="@color/skyBlue"
                 android:background="@drawable/pricebreak_background"/>
         </LinearLayout>
 
