--- a/app/src/main/res/drawable/light_blue_background.xml
+++ b/app/src/main/res/drawable/light_blue_background.xml
@@ -6,6 +6,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
             <solid android:color="#fff3f7fb" />
+            <stroke android:width="1dp" android:color="#53AAFA"/>
         </shape>
     </item>
 </selector>
