Findview By id modification

--- a/app/src/main/res/layout/fragment_customize_order_frag2.xml
+++ b/app/src/main/res/layout/fragment_customize_order_frag2.xml
@@ -114,6 +114,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="italic"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
             android:id="@+id/gwt_text"
             android:layout_marginBottom="4dp"
             android:text="@string/gross"
@@ -127,6 +129,7 @@
                 android:layout_width="match_parent"
                 android:background="@drawable/light_blue_background"
                 android:layout_height="40dp"
+                android:focusable="true"
                 android:gravity="center|start"
                 android:paddingLeft="5dp"
                 android:maxLines="1"
