--- a/app/src/main/res/layout/activity_order_to_b_prosessed.xml
+++ b/app/src/main/res/layout/activity_order_to_b_prosessed.xml
@@ -13,14 +13,13 @@
         android:layout_width="match_parent"
         android:focusableInTouchMode="true"
         android:elevation="10dp"
+        android:background="@null"
         android:focusedByDefault="false"
-        style="@style/Theme.AppCompat.NoActionBar"
         android:layout_height="wrap_content"
       >
 
         <android.support.v7.widget.Toolbar
         android:id="@+id/cart_toolbar"
-
         android:layout_width="match_parent"
             android:elevation="10dp"
             app:titleTextColor="@color/white"
@@ -33,8 +32,7 @@
         <android.support.v7.widget.SearchView
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:elevation="5dp"
-            android:background="@drawable/background_design"
+            android:background="@drawable/light_blue_background"
             android:id="@+id/sellers_search"
             android:focusable="false"
             app:iconifiedByDefault="false"
@@ -44,15 +42,8 @@
             app:defaultQueryHint="Search for Order">
 
         </android.support.v7.widget.SearchView>
-        <View  android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/whish"
-           />
-
 
     </android.support.design.widget.AppBarLayout>
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
