--- a/app/src/main/res/layout/fragment_custom_order_frag2.xml
+++ b/app/src/main/res/layout/fragment_custom_order_frag2.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.Custom_order_frag2">
 
     <!-- TODO: Update blank fragment layout -->
@@ -63,7 +64,12 @@
 
         />
 
-
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:cardCornerRadius="4dp"
+        android:layout_gravity="center">
     <ImageView
         android:layout_width="120dp"
         android:id="@+id/selected_product"
@@ -71,7 +77,7 @@
         android:layout_gravity="center"
         android:layout_margin="15dp"
         />
-
+    </android.support.v7.widget.CardView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
