--- a/app/src/main/res/layout/category_listview.xml
+++ b/app/src/main/res/layout/category_listview.xml
@@ -2,14 +2,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="60dp"
     android:orientation="vertical"
+    android:layout_marginVertical="20dp"
     android:background="@drawable/light_blue_background"
     >
     <TextView
+        android:id="@+id/catalog_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:textAllCaps="true"
         android:gravity="center"
         android:textSize="16sp"
         android:textColor="#24406A"
