--- a/app/src/main/res/layout/fragment_signup_.xml
+++ b/app/src/main/res/layout/fragment_signup_.xml
@@ -87,7 +87,9 @@
             android:fontFamily="@font/roboto_italic"
             android:gravity="center|start"
             android:hint="Company Name*"
+            android:inputType="text"
             android:maxLines="1"
+            android:maxLength="40"
             android:scrollHorizontally="true"
             android:singleLine="true"
             android:textColor="#000"
@@ -123,6 +125,7 @@
                 android:background="#e6e6e5"
                 android:gravity="center|start"
                 android:hint="GSTIN*"
+                android:maxLength="15"
                 android:fontFamily="@font/roboto_italic"
                 android:maxLines="1"
                 android:singleLine="true"
@@ -166,9 +169,11 @@
                         android:gravity="center|start"
                         android:hint="Contact Person Name*"
                         android:maxLines="1"
+                        android:inputType="text"
                         android:fontFamily="@font/roboto_italic"
                         android:singleLine="true"
                         android:scrollHorizontally="true"
+                        android:maxLength="30"
                         android:textColor="#000"
                         android:textSize="14sp" />
                 </android.support.design.widget.TextInputLayout>
@@ -200,11 +205,13 @@
                         android:background="#e6e6e5"
                         android:gravity="center|start"
                         android:hint="Email*"
+                        android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:scrollHorizontally="true"
                         android:textColor="#000"
                         android:fontFamily="@font/roboto_italic"
+                        android:maxLength="30"
                         android:textSize="14sp" />
                 </android.support.design.widget.TextInputLayout>
             </android.support.v7.widget.CardView>
@@ -236,8 +243,10 @@
                         android:hint="Mobile*"
                         android:maxLines="1"
                         android:singleLine="true"
+                        android:inputType="phone"
                         android:scrollHorizontally="true"
                         android:textColor="#000"
+                        android:maxLength="12"
                         android:fontFamily="@font/roboto_italic"
                         android:textSize="14sp" />
                 </android.support.design.widget.TextInputLayout>
@@ -269,9 +278,11 @@
                         android:background="#e6e6e5"
                         android:gravity="center|start"
                         android:hint="Password*"
+                        android:maxLength="30"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:scrollHorizontally="true"
+                        android:inputType="textPassword"
                         android:textColor="#000"
                         android:textSize="14sp"
                         android:fontFamily="@font/roboto_italic"/>
